# digibygg-poc

./: .gitignore
cloud/environment/poc/: main.tf
cloud/infrastructure/aws/: influxdb.tf  metadata.tf  network.tf
cloud/lambda/: insert.py
esp32_bme280/: README.md  device-config.yml  mos.yml
esp32_bme280/src/: main.c
snappysense/: README.md  data-model.md  design.md  mqtt-protocol.md
snappysense/aws-mqtt-client/: .gitignore  Makefile  README  configfile.c  configfile.h  mqtt-client.c  sensors.c  snappysense.c  snappysense.cfg  snappysense.h
snappysense/lambda/: README.md  snappy-reading.py  snappy-startup.py  snappy_data.py  snappy_mqtt.py  snappy_reading.py  test_snappy_reading.py  test_snappy_startup.py
snappysense/mqtt-client/: CMakeLists.txt  Makefile  README  README.md  configfile.c  configfile.h  corto.cfg  mqtt-client.c  sensors.c  snappysense.c  snappysense.cfg  snappysense.h
